--- a/src/application/ErrorScene.fxml
+++ b/src/application/ErrorScene.fxml
@@ -5,21 +5,26 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ErrorSceneController">
    <children>
       <ImageView fitHeight="56.0" fitWidth="94.0" layoutX="14.0" layoutY="28.0">
          <image>
             <Image url="@../../resources/Warning_Sign.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="108.0" layoutY="14.0" prefHeight="56.0" prefWidth="364.0" text="Warning">
+      <Label fx:id="_warningMessage" alignment="CENTER" layoutX="108.0" layoutY="14.0" prefHeight="56.0" prefWidth="364.0" text="Warning">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ScrollPane fx:id="_namePane" layoutX="108.0" layoutY="76.0" prefHeight="97.0" prefWidth="364.0" />
+      <ScrollPane layoutX="108.0" layoutY="76.0" prefHeight="97.0" prefWidth="364.0">
+         <content>
+            <Pane fx:id="_namePane" prefHeight="97.0" prefWidth="362.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
