--- a/src/application/ErrorScene.fxml
+++ b/src/application/ErrorScene.fxml
@@ -9,21 +9,21 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ErrorSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ErrorSceneController">
    <children>
       <ImageView fitHeight="56.0" fitWidth="94.0" layoutX="14.0" layoutY="28.0">
          <image>
             <Image url="@../../resources/Warning_Sign.png" />
          </image>
       </ImageView>
-      <Label fx:id="_warningMessage" alignment="CENTER" layoutX="108.0" layoutY="14.0" prefHeight="56.0" prefWidth="364.0" text="Warning">
+      <Label fx:id="_warningMessage" alignment="CENTER" layoutX="108.0" layoutY="14.0" prefHeight="97.0" prefWidth="364.0" text="Warning">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="108.0" layoutY="76.0" prefHeight="97.0" prefWidth="364.0">
+      <ScrollPane fx:id="_nameScrollPane" layoutX="108.0" layoutY="150.0" prefHeight="97.0" prefWidth="364.0">
          <content>
-            <Pane fx:id="_namePane" prefHeight="97.0" prefWidth="362.0" />
+            <Pane fx:id="_namePane" prefHeight="103.0" prefWidth="344.0" />
          </content>
       </ScrollPane>
    </children>
