--- a/src/application/SelectionSceneStyleSheet.css
+++ b/src/application/SelectionSceneStyleSheet.css
@@ -1,25 +1,25 @@
 #_pracButton {
-	-fx-background-color: rgb(0, 255, 0, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 #_addToListButton {
-	-fx-background-color: rgb(0, 0, 255, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 #_uploadButton {
-	-fx-background-color: rgb(0, 0, 255, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 #_pracSelButton {
-	-fx-background-color: rgb(0, 255, 0, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 #_removeSelButton {
-	-fx-background-color: rgb(255, 0, 0, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 #_deleteSelButton {
-	-fx-background-color: rgb(255, 0, 0, 0.4);	
+	-fx-background-color: lightgrey;	
 }
 
 #_practiceListPane {
@@ -43,7 +43,7 @@
 }
 
 #_shopButton {
-	-fx-background-color: rgb(200, 0, 255, 0.4);
+	-fx-background-color: lightgrey;
 }
 
 
