Added loop functionality

--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
       <Label id="_nameLabel" fx:id="_currentName" alignment="CENTER" layoutX="109.0" layoutY="53.0" prefHeight="68.0" prefWidth="242.0" stylesheets="@PracticeSceneStyleSheet.css" text="Name">
          <font>
@@ -91,7 +91,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <JFXButton fx:id="_loop" layoutX="38.0" layoutY="404.0" prefHeight="36.0" prefWidth="119.0" text="Loop">
+      <JFXButton fx:id="_loop" layoutX="38.0" layoutY="404.0" onAction="#loopFiles" prefHeight="36.0" prefWidth="119.0" text="Loop">
          <font>
             <Font size="23.0" />
          </font>
