--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,9 +27,18 @@
                               <AnchorPane prefHeight="568.0" prefWidth="289.0">
                                  <children>
                                     <AnchorPane id="_practiceListPane" fx:id="_practiceListPane" prefHeight="489.0" prefWidth="289.0" stylesheets="@SelectionSceneStyleSheet.css" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <JFXButton id="_pracSelButton" fx:id="_practiceListButton" buttonType="RAISED" layoutY="513.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="143.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice Selected" />
-                                    <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="3.0" layoutY="485.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All" />
-                                    <JFXButton id="_removeSelButton" fx:id="_removeButton" buttonType="RAISED" layoutX="145.0" layoutY="513.0" onAction="#removeClicked" prefHeight="48.0" prefWidth="141.0" stylesheets="@SelectionSceneStyleSheet.css" text="Remove Selected" />
+                                    <JFXButton id="_pracSelButton" fx:id="_practiceListButton" buttonType="RAISED" layoutY="513.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="143.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice Selected">
+                                       <tooltip>
+                                          <Tooltip text="Practice the selected names." />
+                                       </tooltip></JFXButton>
+                                    <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="3.0" layoutY="485.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All">
+                                       <tooltip>
+                                          <Tooltip text="Select all the names in the list" />
+                                       </tooltip></JFXCheckBox>
+                                    <JFXButton id="_removeSelButton" fx:id="_removeButton" buttonType="RAISED" layoutX="145.0" layoutY="513.0" onAction="#removeClicked" prefHeight="48.0" prefWidth="141.0" stylesheets="@SelectionSceneStyleSheet.css" text="Remove Selected">
+                                       <tooltip>
+                                          <Tooltip text="Remove the selected names from the list" />
+                                       </tooltip></JFXButton>
                                  </children>
                               </AnchorPane>
                            </children></Pane>
@@ -42,7 +52,10 @@
                                  <children>
                                     <AnchorPane id="_recordingListPane" fx:id="_recordingListPane" prefHeight="494.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" />
                                     <JFXButton id="_deleteSelButton" fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Delete Selected" />
-                                    <JFXCheckBox id="_checkBoxToggle" fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="494.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="26.0" prefWidth="283.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All" />
+                                    <JFXCheckBox id="_checkBoxToggle" fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="494.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="26.0" prefWidth="283.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All">
+                                       <tooltip>
+                                          <Tooltip text="Select all the names in the recordings list" />
+                                       </tooltip></JFXCheckBox>
                                  </children>
                               </AnchorPane>
                            </children></Pane>
@@ -65,19 +78,31 @@
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Add searched name to practice list." />
+               </tooltip>
             </JFXButton>
             <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Upload a text file with names" />
+               </tooltip>
             </JFXButton>
             <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice">
                <font>
                   <Font size="18.0" />
                </font>
+               <tooltip>
+                  <Tooltip text="Practice just the searched name" />
+               </tooltip>
             </JFXButton>
             <CustomTextField id="_searchBar" fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" stylesheets="@SelectionSceneStyleSheet.css" />
-            <Label id="_pointLabel" fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" stylesheets="@SelectionSceneStyleSheet.css" text="Label" />
+            <Label id="_pointLabel" fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" stylesheets="@SelectionSceneStyleSheet.css" text="Label">
+               <tooltip>
+                  <Tooltip text="Your current points. Collect more and see what you want in the shop" />
+               </tooltip></Label>
             <ImageView fx:id="_shopButton" fitHeight="73.0" fitWidth="92.0" layoutX="34.0" layoutY="23.0" onMouseClicked="#shopClicked">
                <image>
                   <Image url="@../images/Trolley.png" />
