--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -6,6 +6,7 @@
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,40 +16,96 @@
          <font>
             <Font size="48.0" />
          </font>
+         <tooltip>
+            <Tooltip text="The current name.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </Label>
       <JFXButton id="_playButton" fx:id="_playAllButton" buttonType="RAISED" layoutX="151.0" layoutY="171.0" onAction="#playAllClicked" prefHeight="84.0" prefWidth="168.0" stylesheets="@PracticeSceneStyleSheet.css" text="Play">
          <font>
             <Font size="36.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Play name from database.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <JFXButton id="_recordButton" fx:id="_recordButton" buttonType="RAISED" layoutX="567.0" layoutY="65.0" onAction="#recordClicked" prefHeight="78.0" prefWidth="242.0" stylesheets="@PracticeSceneStyleSheet.css" text="Record">
          <font>
             <Font size="36.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Create a recording for the name.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <JFXButton id="_playCurButton" fx:id="_playRecordingButton" buttonType="RAISED" layoutX="466.0" layoutY="93.0" onAction="#playRecordingClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@PracticeSceneStyleSheet.css" text="Play">
          <font>
             <Font size="14.0" />
-         </font></JFXButton>
+         </font>
+         <tooltip>
+            <Tooltip text="Play most recent recording.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip></JFXButton>
       <JFXButton id="_saveCurButton" fx:id="_saveButton" buttonType="RAISED" layoutX="595.0" layoutY="93.0" onAction="#saveClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@PracticeSceneStyleSheet.css" text="Save">
          <font>
             <Font size="14.0" />
-         </font></JFXButton>
+         </font>
+         <tooltip>
+            <Tooltip text="Save your most recent recording.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip></JFXButton>
       <JFXSlider fx:id="_volumeSlider" blockIncrement="1.0" layoutX="151.0" layoutY="377.0" onDragDone="#volumeSliderDragged" prefHeight="14.0" prefWidth="168.0" value="30.0" />
       <JFXButton id="_prevButton" fx:id="_prevButton" buttonType="RAISED" layoutX="43.0" layoutY="190.0" onAction="#prevClicked" prefHeight="47.0" prefWidth="85.0" stylesheets="@PracticeSceneStyleSheet.css" text="Previous">
          <font>
             <Font size="14.0" />
-         </font></JFXButton>
+         </font>
+         <tooltip>
+            <Tooltip text="Go to previous name.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip></JFXButton>
       <JFXButton id="_nextButton" fx:id="_nextButton" buttonType="RAISED" layoutX="359.0" layoutY="189.0" onAction="#nextClicked" prefHeight="47.0" prefWidth="86.0" stylesheets="@PracticeSceneStyleSheet.css" text="Next">
          <font>
             <Font size="14.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Go to next name.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <JFXProgressBar fx:id="_micSensitivityBar" layoutX="135.0" layoutY="487.0" />
       <JFXButton id="_deleteCurButton" fx:id="_deleteButton" buttonType="RAISED" layoutX="731.0" layoutY="93.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@PracticeSceneStyleSheet.css" text="Delete">
          <font>
             <Font size="14.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Delete mot recent recording.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <JFXTabPane layoutX="536.0" layoutY="150.0" prefHeight="338.0" prefWidth="303.0">
          <tabs>
@@ -56,6 +113,9 @@
               <content>
                 <AnchorPane id="_recordingPane" fx:id="_recordingList" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@PracticeSceneStyleSheet.css" />
               </content>
+               <tooltip>
+                  <Tooltip text="Empty Tooltip" />
+               </tooltip>
             </Tab>
          </tabs>
       </JFXTabPane>
@@ -63,21 +123,49 @@
          <font>
             <Font size="14.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Play selected recording.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <JFXButton id="_deleteSelectedButton" fx:id="_deleteSelectedButton" buttonType="RAISED" layoutX="688.0" layoutY="519.0" onAction="#deleteSelectedClicked" prefHeight="36.0" prefWidth="119.0" stylesheets="@PracticeSceneStyleSheet.css" text="Delete Selected">
          <font>
             <Font size="14.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Delete the selected name.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </JFXButton>
       <Label id="_volumeLabel" layoutX="187.0" layoutY="326.0" prefHeight="36.0" prefWidth="96.0" stylesheets="@PracticeSceneStyleSheet.css" text="Volume" textAlignment="JUSTIFY">
          <font>
             <Font size="24.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Volume.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </Label>
       <Label id="_micSensitivityLabel" layoutX="145.0" layoutY="433.0" prefHeight="36.0" prefWidth="180.0" stylesheets="@PracticeSceneStyleSheet.css" text="Mic Sensitivity" textAlignment="JUSTIFY">
          <font>
             <Font size="24.0" />
          </font>
+         <tooltip>
+            <Tooltip text="Your current mic sensitvity.">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Tooltip>
+         </tooltip>
       </Label>
    </children>
 </AnchorPane>
