the pressionbar is red now still need to get the slider red

--- a/src/application/DarkPracticeSceneStyleSheet.css
+++ b/src/application/DarkPracticeSceneStyleSheet.css
@@ -2,6 +2,7 @@
 #_playButton, #_nextButton, #_prevButton {
     -fx-background-color: rgb(50, 50, 50, 0.9);
 	-fx-text-fill: red;
+	-fx-accent: crimson;
 }
 
 #_recordingPane {
@@ -16,3 +17,12 @@
 	-fx-text-fill: red;
 }
 
+#_micSensitivityBar > .track, #_micSensitivityBar > .bar {
+	-fx-background-radius: 0;
+	-fx-background-insets: 0;
+	-fx-background-color: red;
+}
+
+#_volumeBar > .track, #_volumeBar > .slider {
+	-fx-control-inner-background: red;
+}
