--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -14,11 +14,11 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
-      <AnchorPane prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
+      <AnchorPane id="_leftPane" prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXTabPane id="_tabParent" layoutX="1.0" prefHeight="600.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css">
+            <JFXTabPane id="_tabParent" layoutX="1.0" prefHeight="600.0" prefWidth="284.0">
                <tabs>
                   <Tab text="Practice List">
                      <content>
@@ -26,16 +26,16 @@
                            <children>
                               <AnchorPane prefHeight="568.0" prefWidth="289.0">
                                  <children>
-                                    <AnchorPane id="_practiceListPane" fx:id="_practiceListPane" prefHeight="489.0" prefWidth="289.0" stylesheets="@SelectionSceneStyleSheet.css" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <JFXButton id="_pracSelButton" fx:id="_practiceListButton" buttonType="RAISED" layoutY="513.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="143.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice Selected">
+                                    <AnchorPane id="_practiceListPane" fx:id="_practiceListPane" prefHeight="489.0" prefWidth="289.0" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <JFXButton id="_pracSelButton" fx:id="_practiceListButton" buttonType="RAISED" layoutY="513.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="143.0" text="Practice Selected">
                                        <tooltip>
                                           <Tooltip text="Practice the selected names." />
                                        </tooltip></JFXButton>
-                                    <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="3.0" layoutY="485.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All">
+                                    <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="3.0" layoutY="485.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" text="Select All">
                                        <tooltip>
                                           <Tooltip text="Select all the names in the list" />
                                        </tooltip></JFXCheckBox>
-                                    <JFXButton id="_removeSelButton" fx:id="_removeButton" buttonType="RAISED" layoutX="145.0" layoutY="513.0" onAction="#removeClicked" prefHeight="48.0" prefWidth="141.0" stylesheets="@SelectionSceneStyleSheet.css" text="Remove Selected">
+                                    <JFXButton id="_removeSelButton" fx:id="_removeButton" buttonType="RAISED" layoutX="145.0" layoutY="513.0" onAction="#removeClicked" prefHeight="48.0" prefWidth="141.0" text="Remove Selected">
                                        <tooltip>
                                           <Tooltip text="Remove the selected names from the list" />
                                        </tooltip></JFXButton>
@@ -50,9 +50,9 @@
                            <children>
                               <AnchorPane prefHeight="567.0" prefWidth="285.0">
                                  <children>
-                                    <AnchorPane id="_recordingListPane" fx:id="_recordingListPane" prefHeight="494.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" />
-                                    <JFXButton id="_deleteSelButton" fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Delete Selected" />
-                                    <JFXCheckBox id="_checkBoxToggle" fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="494.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="26.0" prefWidth="283.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All">
+                                    <AnchorPane id="_recordingListPane" fx:id="_recordingListPane" prefHeight="494.0" prefWidth="284.0" />
+                                    <JFXButton id="_deleteSelButton" fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" text="Delete Selected" />
+                                    <JFXCheckBox id="_checkBoxToggle" fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="494.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="26.0" prefWidth="283.0" text="Select All">
                                        <tooltip>
                                           <Tooltip text="Select all the names in the recordings list" />
                                        </tooltip></JFXCheckBox>
@@ -67,14 +67,14 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane id="_background" prefHeight="600.0" prefWidth="625.0" stylesheets="@SelectionSceneStyleSheet.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
          <children>
-            <Label id="_typeInANameLabel" layoutX="126.0" layoutY="127.0" prefHeight="70.0" prefWidth="411.0" stylesheets="@SelectionSceneStyleSheet.css" text="Type in a Name">
+            <Label id="_typeInANameLabel" layoutX="126.0" layoutY="127.0" prefHeight="70.0" prefWidth="411.0" text="Type in a Name">
                <font>
                   <Font size="48.0" />
                </font>
             </Label>
-            <JFXButton id="_addToListButton" fx:id="_addToListButton" buttonType="RAISED" layoutX="308.0" layoutY="370.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" stylesheets="@SelectionSceneStyleSheet.css" text="Add to List">
+            <JFXButton id="_addToListButton" fx:id="_addToListButton" buttonType="RAISED" layoutX="308.0" layoutY="370.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" text="Add to List">
                <font>
                   <Font size="18.0" />
                </font>
@@ -82,7 +82,7 @@
                   <Tooltip text="Add searched name to practice list." />
                </tooltip>
             </JFXButton>
-            <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
+            <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" text="Upload">
                <font>
                   <Font size="18.0" />
                </font>
@@ -90,7 +90,7 @@
                   <Tooltip text="Upload a text file with names" />
                </tooltip>
             </JFXButton>
-            <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice">
+            <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" text="Practice">
                <font>
                   <Font size="18.0" />
                </font>
@@ -98,12 +98,12 @@
                   <Tooltip text="Practice just the searched name" />
                </tooltip>
             </JFXButton>
-            <CustomTextField id="_searchBar" fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" stylesheets="@SelectionSceneStyleSheet.css" />
-            <Label id="_pointLabel" fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" stylesheets="@SelectionSceneStyleSheet.css" text="Label">
+            <CustomTextField id="_searchBar" fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" />
+            <Label id="_pointLabel" fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" text="Label">
                <tooltip>
                   <Tooltip text="Your current points. Collect more and see what you want in the shop" />
                </tooltip></Label>
-            <ImageView fx:id="_shopButton" fitHeight="73.0" fitWidth="92.0" layoutX="34.0" layoutY="23.0" onMouseClicked="#shopClicked">
+            <ImageView id="_marketIcon" fx:id="_shopButton" fitHeight="73.0" fitWidth="92.0" layoutX="34.0" layoutY="23.0" onMouseClicked="#shopClicked">
                <image>
                   <Image url="@../images/Trolley.png" />
                </image>
