--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <AnchorPane id="_leftPane" prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
