Fixed bug that resulted in scrollpane not showing up in the practise scene tab

--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -60,7 +60,7 @@
                <content>
                   <Pane prefHeight="200.0" prefWidth="305.0">
                      <children>
-                        <ScrollPane fx:id="_recordingList" layoutY="3.0" />
+                        <ScrollPane fx:id="_recordingList" layoutY="3.0" prefHeight="307.0" prefWidth="303.0" />
                      </children></Pane>
                </content></Tab>
          </tabs>
