--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <JFXTabPane id="_tabParent" stylesheets="@SelectionSceneStyleSheet.css">
          <tabs>
@@ -51,7 +51,7 @@
                               <HBox spacing="3.0">
                                  <children>
                                     <JFXButton id="_deleteSelButton" fx:id="_deleteUserRecording" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="44.0" prefWidth="159.0" stylesheets="@SelectionSceneStyleSheet.css" text="Delete Selected" />
-                                    <JFXButton mnemonicParsing="false" prefHeight="44.0" prefWidth="145.0" text="Play Selected" />
+                                    <JFXButton mnemonicParsing="false" onAction="#playSelectedRecordingsClicked" prefHeight="44.0" prefWidth="145.0" text="Play Selected" />
                                  </children>
                               </HBox>
                            </children>
@@ -124,8 +124,8 @@
                               <Font size="18.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton mnemonicParsing="false" prefHeight="38.0" prefWidth="137.0" text="Add To Database" />
-                        <JFXButton mnemonicParsing="false" prefHeight="36.0" prefWidth="112.0" text="Save Session" />
+                        <JFXButton mnemonicParsing="false" onAction="#AddToDatabaseClicked" prefHeight="38.0" prefWidth="137.0" text="Add To Database" />
+                        <JFXButton mnemonicParsing="false" onAction="#saveSessionClicked" prefHeight="36.0" prefWidth="112.0" text="Save Session" />
                      </children>
                   </HBox>
                </children>
