--- a/src/themes/ShopSceneStyleSheet.css
+++ b/src/themes/ShopSceneStyleSheet.css
@@ -1,8 +1,8 @@
-#_defaultThemeButton {
-	-fx-background-color: rgb(255, 0, 0, 0.4);
+#_defaultThemeButton, #_darkThemeButton, #_rainbowThemeButton {
+	-fx-background-color: lightgrey;
 }
 
-#_darkThemeButton {
-	-fx-background-color: rgb(255, 255, 255, 0.8);
+#_themePane {
+	-fx-background-color: rgb(230, 230, 230);
 }
 
