Added method to get the number of database file count in the Initialize class and also added the method to access it from the ControllerConnector

--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -130,6 +130,7 @@
                   </HBox>
                </children>
             </Pane>
+            <Label fx:id="_databaseFileCount" text="Database File:  " AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" />
          </children>
       </AnchorPane>
    </center>
