--- a/src/themes/ShopSceneStyleSheet.css
+++ b/src/themes/ShopSceneStyleSheet.css
@@ -1,4 +1,4 @@
-#_defaultThemeButton, #_darkThemeButton, #_sunsetThemeButton {
+#_defaultThemeButton, #_darkThemeButton, #_sunsetThemeButton, #_chocoThemeButton {
 	-fx-background-color: lightgrey;
 }
 
